# age-otp

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
clib/: Makefile  age-otp.h  example.c
examples/: main.rs
src/: engine.rs  error.rs  ffi.rs  lib.rs  types.rs
tests/: engine_tests.rs
