[package]
name = "age-otp"
version = "0.2.0"
edition = "2021"
description = "Generate OTP codes from age public keys"

[dependencies]
age-setup = "0.1"
bech32 = "0.11"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
thiserror = "1.0"
subtle = "2.5"
zeroize = "1.7"
libc = "0.2.186"
hex = "0.4"

[build-dependencies]
cbindgen = "0.29.2"

[lib]
crate-type = ["cdylib", "rlib"] 
